--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,6 @@
-file_path=C:/Users/mail/AppData/Local/Mixxx/mixxxdb.sqlite
+file_path=C:/Users/mail/AppData/Local/Mixxx/mixxxdb.sqlite_bkup
 autostartosc=True
 osc_tosc_server_address=192.168.178.31
 osc_tosc_server_port=7777
 osc_server_port=8001
-midi_input_device=4- Steinberg UR22-1 0
+midi_input_device=TouchOSC Bridge 2
